REST API tests - fixed results
